# Win-VPN-Client-Samhain-Security

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SamhainSecurity.sln  VpnClientWindows.sln  runtime-bundle.lock.json
SamhainSecurity/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SamhainSecurity.csproj
SamhainSecurity.Service/: Program.cs  ProtectionPolicyService.cs  SamhainSecurity.Service.csproj  TunnelSupervisorService.cs
SamhainSecurity/Models/: AppRoutingMode.cs  AppRoutingModeOption.cs  AppRoutingPathParser.cs  AppSettings.cs  ConnectionHistoryEntry.cs  ConnectionStateRecord.cs  EngineCatalogEntry.cs  ProtocolOption.cs  StructuredLogEntry.cs  SubscriptionImportResult.cs  SubscriptionSource.cs  TunnelTypeOption.cs  VpnProfile.cs  VpnProtocolType.cs  VpnTunnelType.cs
SamhainSecurity/Services/: AdminElevationService.cs  AmneziaWireGuardService.cs  AppSettingsStore.cs  CommandResult.cs  ConnectionHistoryStore.cs  ConnectionStateStore.cs  DiagnosticsBundleService.cs  EngineAvailabilityService.cs  EngineCatalogService.cs  EnginePathResolver.cs  EngineVersionService.cs  EnvironmentDiagnosticsService.cs  FriendlyErrorService.cs  MultiProtocolVpnService.cs  PowerShellVpnService.cs  ProcessRunner.cs  ProfileStore.cs  ProtocolProfileValidator.cs  ReleaseReadinessService.cs  RuntimePathService.cs  SamhainServiceClient.cs  SecretRedactor.cs  SecureDataProtector.cs  ServerProbeService.cs  ServiceControlService.cs  SingBoxVpnService.cs  StartupRegistrationService.cs  StructuredLogService.cs  SubscriptionImportService.cs  SubscriptionStore.cs  SubscriptionUrlNormalizer.cs  VlessShareLinkParser.cs  WireGuardTunnelService.cs
VpnClientWindows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VpnClientWindows.csproj
VpnClientWindows/Models/: ProtocolOption.cs  TunnelTypeOption.cs  VpnProfile.cs  VpnProtocolType.cs  VpnTunnelType.cs
VpnClientWindows/Services/: EnginePathResolver.cs  EnvironmentDiagnosticsService.cs  MultiProtocolVpnService.cs  ProfileStore.cs  RuntimePathService.cs  VlessShareLinkParser.cs
apps/desktop-qt/: CMakeLists.txt
apps/desktop-qt/qml/: Main.qml
apps/desktop-qt/src/: AppController.cpp  AppController.h  main.cpp
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: main.rs
docs/: APP_ROUTING_ENFORCEMENT.md  APP_ROUTING_MATRIX.md  ARCHITECTURE.md  BETA_CHECKLIST.md  BUILD.md  CLEAN_MACHINE_EVIDENCE.md  CONNECTION_RELIABILITY.md  DESKTOP_INTEGRATION.md  ENGINE_BUNDLE.md  LOCAL_OPERATIONS.md  PROTOCOL_MATRIX.md  RELEASE_CANDIDATE.md  RELEASE_NOTES_1.4.0.md  RELEASE_NOTES_1.4.1.md  RELEASE_NOTES_1.4.2.md  RELEASE_NOTES_1.4.3.md  RELEASE_NOTES_1.4.4.md  RELEASE_NOTES_1.4.5.md  RELEASE_NOTES_1.4.6.md  RELEASE_NOTES_1.4.7.md  RELEASE_NOTES_1.4.8.md  RELEASE_NOTES_1.4.9.md  RELEASE_NOTES_1.5.0.md  RELEASE_NOTES_1.5.1.md  ROADMAP.md  SECURITY.md  SECURITY_POSTURE.md  SIGNING.md  STABLE_RELEASE.md  SUPPORT_DIAGNOSTICS.md  UPDATE_ROLLBACK.md  UX.md  UX_FREEZE.md  VISUAL_QA.md
engines/: README.md
engines/amneziawg/: .gitkeep  README.md
engines/sing-box/: README.md
engines/wireguard/: README.md
installer/: README.md  SamhainSecurityInstaller.wxs  installer-build-plan.json  installer-handoff.json  signing-policy.json
scripts/: build.ps1  fetch-runtime-bundle.ps1  install-local.ps1  installer-plan.json  local-ops.ps1  package-portable.ps1  package.ps1  prepare-runtime-bundle.ps1  smoke-adapter-path.ps1  smoke-package.ps1  smoke-proxy-path.ps1  smoke-tun-path.ps1  test-installer-skeleton.ps1  test-installer-toolchain.ps1  test-privileged-service-readiness.ps1  test-public-updater-rollout.ps1  test-signing-readiness.ps1  test-update-rehearsal.ps1  uninstall-local.ps1  validate-package.ps1  verify-update-manifest.ps1  write-clean-machine-evidence.ps1  write-release-evidence.ps1  write-release-notes.ps1
