[workspace]
members = [
    "crates/core",
    "crates/ipc",
    "crates/service"
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2024"
license = "Proprietary"
authors = ["Samhain Security"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
