[package]
name = "samhain-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
samhain-core = { path = "../core" }
samhain-ipc = { path = "../ipc" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
ureq = { version = "2.12", features = ["tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
] }
